--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,11 +10,30 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- task: AzureStaticWebApp@0
-  inputs:
-    app_location: '/'
-    app_build_command: 'npm run docs:build'
-    output_location: 'docs/.vuepress/dist'
-    deployment_environment: 'preview'
-    azure_static_web_apps_api_token: $(AZURE_STATIC_WEB_APPS_API_TOKEN)
+
+jobs:
+  - job: preview_phase
+    steps:
+    - task: AzureStaticWebApp@0
+      inputs:
+        app_location: '/'
+        app_build_command: 'npm run docs:build'
+        output_location: 'docs/.vuepress/dist'
+        deployment_environment: 'preview'
+        azure_static_web_apps_api_token: $(AZURE_STATIC_WEB_APPS_API_TOKEN)
+  - deployment: production_phase
+    environment: blog-ferrory-net
+    dependsOn: preview_phase
+    strategy: 
+     runOnce:
+      deploy:
+        steps:
+         - task: AzureStaticWebApp@0
+           inputs:
+             app_location: '/'
+             app_build_command: 'npm run docs:build'
+             output_location: 'docs/.vuepress/dist'
+             deployment_environment: 'production'
+             azure_static_web_apps_api_token: $(AZURE_STATIC_WEB_APPS_API_TOKEN)
+
+
