--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,12 +30,13 @@ stages:
      runOnce:
       deploy:
         steps:
-         - task: AzureStaticWebApp@0
-           inputs:
-             app_location: '/'
-             app_build_command: 'npm run docs:build'
-             output_location: 'docs/.vuepress/dist'
-             deployment_environment: 'production'
-             azure_static_web_apps_api_token: $(AZURE_STATIC_WEB_APPS_API_TOKEN)
+        - checkout: self
+        - task: AzureStaticWebApp@0
+          inputs:
+            app_location: '/'
+            app_build_command: 'npm run docs:build'
+            output_location: 'docs/.vuepress/dist'
+            deployment_environment: 'production'
+            azure_static_web_apps_api_token: $(AZURE_STATIC_WEB_APPS_API_TOKEN)
 
 
